--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,17 +2,45 @@
 name = "pygrammalecte"
 version = "0.1.0"
 description = "Grammalecte, le correcteur grammatical en Python"
+classifiers = [
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Operating System :: OS Independent"
+    # TODO: Add more
+]
 authors = ["Vincent Poulailleau <vpoulailleau@gmail.com>"]
+readme = "README.md"
+repository = "https://github.com/vpoulailleau/pygrammalecte"
+homepage = "https://github.com/vpoulailleau/pygrammalecte"
+documentation = "https://github.com/vpoulailleau/pygrammalecte"
+keywords = ["grammalecte", "linter", "grammatical", "french"]
 license = "BSD-3-Clause"
+include = ["pygrammalecte/**/*.py"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
 requests = "^2.20.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.0.1"
-pytest-cov = "^2.10.0"
+pytest = "^5.0.0"
+pytest-cov = "^2.8.0"
+tox = "^3.14.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.tox]
+legacy_tox_ini = """
+[tox]
+isolated_build = True
+envlist = py37, py38, py3.9
+
+[testenv]
+whitelist_externals = poetry
+changedir = {toxinidir}/tests
+commands =
+    poetry install -v
+    poetry run pytest -s -vv --cov=pygrammalecte
+"""
