--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,11 @@ matrix:
       dist: xenial
       sudo: true
 
+before_install:
+  - pip install poetry
+
 install:
+  - poetry install
   - pip install -U tox-travis
   - pip install coverage
 
