--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ changedir = {toxinidir}/tests
 commands =
     poetry install -v
     poetry run pytest -s -vv --cov=pygrammalecte
+    poetry run coverage xml
 """
 
 [build-system]
