--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,6 @@ before_script:
 script:
   - tox
 after_script:
+  - echo "$TRAVIS_PULL_REQUEST"
+  - echo "$TRAVIS_PYTHON_VERSION"
   - if [[ "$TRAVIS_PULL_REQUEST" == "false" && "$TRAVIS_PYTHON_VERSION" == "3.7" ]]; then ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT; fi
