look for coverage report

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,6 @@ script:
 after_script:
   - echo "$TRAVIS_PULL_REQUEST"
   - echo "$TRAVIS_PYTHON_VERSION"
+  - ls .coverage
+  - find . -name ".coverage"
   - if [[ "$TRAVIS_PULL_REQUEST" == "false" && "$TRAVIS_PYTHON_VERSION" == "3.7" ]]; then ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT; fi
