--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,8 @@ commands =
     poetry run coverage xml
     echo 'fix travis bug'
     sed --in-place -e 's#//home#/home#g' coverage.xml
+    echo 'fix codeclimate bug, use relative path'
+    sed --in-place -e 's#/home.*vpoulailleau/pygrammalecte/##g' coverage.xml
     cat coverage.xml
 """
 #echo 'fix codeclimate bug'
