--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ allowlist_externals =
     echo
     sed
     cat
+    cp
 changedir = {toxinidir}/tests
 commands =
     poetry install -v
@@ -49,7 +50,8 @@ commands =
     sed --in-place -e 's#//home#/home#g' coverage.xml
     echo 'fix codeclimate bug, use relative path'
     sed --in-place -e 's#/home.*vpoulailleau/pygrammalecte/##g' coverage.xml
-    cat coverage.xml
+    cp coverage.xml ../coverage.xml
+    cat ../coverage.xml
 """
 #echo 'fix codeclimate bug'
 #sed --in-place -e 's#/home.*pygrammalecte/##g' coverage.xml
