--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ isolated_build = True
 envlist = py37, py38
 
 [testenv]
-allowlist_externals =
+whitelist_externals =
     poetry
     echo
     sed
@@ -53,8 +53,6 @@ commands =
     cp coverage.xml ../coverage.xml
     cat ../coverage.xml
 """
-#echo 'fix codeclimate bug'
-#sed --in-place -e 's#/home.*pygrammalecte/##g' coverage.xml
 
 [build-system]
 requires = ["poetry>=0.12"]
