--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ python = "^3.7"
 requests = "^2.20.0"
 
 [tool.poetry.dev-dependencies]
-python-dev-tools = ">=2020.9.4"
+python-dev-tools = {version = ">=2020.9.4", python = ">=3.7,<4.0"}
 
 [tool.tox]
 legacy_tox_ini = """
