--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,35 +1,40 @@
-[tool.poetry]
+[project]
 name = "pygrammalecte"
-version = "1.3.0"
+version = "1.4.0"
 description = "Grammalecte, le correcteur grammatical en Python"
+readme = "README.md"
 classifiers = [
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
-    "Operating System :: OS Independent"
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
+    "Operating System :: OS Independent",
     # TODO: Add more
 ]
-authors = ["Vincent Poulailleau <vpoulailleau@gmail.com>"]
-readme = "README.md"
-repository = "https://github.com/vpoulailleau/pygrammalecte"
-homepage = "https://github.com/vpoulailleau/pygrammalecte"
-documentation = "https://github.com/vpoulailleau/pygrammalecte"
+requires-python = ">=3.9"
+authors = [{ name = "Vincent Poulailleau", email = "vpoulailleau@gmail.com" }]
 keywords = ["grammalecte", "linter", "grammatical", "grammar-checker", "french"]
 license = "BSD-3-Clause"
-include = ["pygrammalecte/**/*.py"]
+dependencies = ["requests>=2.20.0"]
 
-[tool.poetry.dependencies]
-python = "^3.7"
-requests = "^2.20.0"
+[project.urls]
+"Source code" = "https://github.com/vpoulailleau/pygrammalecte"
+Repository = "https://github.com/vpoulailleau/pygrammalecte"
+homepage = "https://github.com/vpoulailleau/pygrammalecte"
+documentation = "https://github.com/vpoulailleau/pygrammalecte"
 
-[tool.poetry.dev-dependencies]
-python-dev-tools = {version = ">=2020.9.4", python = ">=3.7,<4.0"}
+[tool.hatch.build.targets.sdist]
+exclude = [".gitignore", "/.github", "/docs", "config.toml"]
+
+[tool.hatch.build.targets.wheel]
+packages = ["pygrammalecte"]
 
 [tool.tox]
 legacy_tox_ini = """
 [tox]
 isolated_build = True
-envlist = py37, py38
+envlist = py39, py310, py311, py312, py313
 
 [testenv]
 whitelist_externals =
@@ -51,7 +56,9 @@ commands =
     cat ../coverage.xml
 """
 
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+[tool.uv]
+dev-dependencies = ["ruff>=0.7.2"]
 
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
