--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ homepage = "https://github.com/vpoulailleau/pygrammalecte"
 documentation = "https://github.com/vpoulailleau/pygrammalecte"
 
 [tool.hatch.build.targets.sdist]
-exclude = [".gitignore", "/.github", "/docs", "config.toml"]
+packages = ["pygrammalecte"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["pygrammalecte"]
