--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,20 +2,20 @@ name: tests
 
 on: workflow_dispatch
 
-strategy:
-  matrix:
-    python-version:
-      - "3.9"
-      - "3.10"
-      - "3.11"
-      - "3.12"
-      - "3.13"
-
 jobs:
   uv-example:
     name: tests
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+        python-version:
+          - "3.9"
+          - "3.10"
+          - "3.11"
+          - "3.12"
+          - "3.13"
 
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
 
